# storm-cli

./: README.md  pyproject.toml  setup.py
demo-app/: README.md  pyproject.toml
demo-app/src/demo-app/: __init__.py  main.py  settings.py
demo-app/src/demo-app/controllers/: __init__.py  users_controller.py
demo-app/src/demo-app/services/: app_service.py  users_service.py
src/storm/cli/: generate.py  info.py  init.py  main.py
src/storm_cli/commands/: generate.py
storm_cli/: main.py
storm_cli/commands/: add.py  build.py  config.py  console.py  deploy.py  generate.py  info.py  lint.py  new.py  serve.py  start.py  test.py
storm_cli/templates/: controller_template.py  module_template.py  module_template.txt  service_template.txt
storm_cli/utils/: file_manager.py  logger.py
templates/controller/: controller.py.jinja  copier.yaml  {{package_name}}_controller.py.jinja
templates/project/: README.md.jinja  copier.yaml  pyproject.toml.jinja
templates/project/src/{{ project_name }}/: settings.py.jinja
templates/project/src/{{ project_name }}/controllers/: app_controller.py
templates/project/src/{{ project_name }}/modules/: app_module.py
templates/service/: {{package_name}}_service.py.jinja
