[build-system]
requires = ["pdm-backend", "pdm-build-locked"]
build-backend = "pdm.backend"

[project]
name = "storm"
version = "0.1.0"
description = "CLI for the Storm framework"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "typer[all]",
  "rich>=13",
  "copier>=8.0.0",
  "platformdirs",
  "tomlkit",
  "importlib-metadata; python_version<'3.10'",
]

[project.scripts]
storm = "storm.cli.main:app"

[tool.pdm.build]
package-dir = "src"
includes = ["storm"]
